Added the changes

--- a/police/signup/verification.html
+++ b/police/signup/verification.html
@@ -6,21 +6,21 @@
     <title>
         Sign Up-Verification
     </title>
-    <link rel="stylesheet" href="../../../resources/css/user/signup/verification.css">
+    <link rel="stylesheet" href="../../resources/css/police/SignUp/verification.css">
 </head>
 <body>
     <div class="header">
         <div class="ntsflogo">
-            <img src="../../../resources/images/logo_NTSF.png" alt="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>  
         <div class="title">
             <h2>
-                Driver
+                National Traffic Spot Fine
             </h2>
         </div>
 
         <div class="homelogo">
-            <img src="../../../resources/images/home.png" alt="homelogo">
+            <img src="../../resources/images/home.png" alt="homelogo">
         </div>
     </div> 
 
