--- a/user/pedestrian/login.html
+++ b/user/pedestrian/login.html
@@ -9,71 +9,55 @@
     <title>
         Login-Pedestrian
     </title>
-    <link rel="stylesheet"
-          href="../../Resources/CSS/User/login.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="../../resources/css/user/login.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script src="../../Resources/JS/User/Driver/login-pedestrian.js"></script>
 </head>
 
 <body>
-    <div class="header"
-         align="left">
-        <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
-                 alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>
         <div class="headline">
-            <h2 align="center">
-                <b>Pedestrian</b>
+            <h2>
+                Pedestrian
             </h2>
         </div>
 
-        <div class="logo2"
-             align="right">
-            <img src="../../Resources/All-Images/home.png"
-                 alt="logo1">
+        <div class="homelogo">
+            <img src="../../resources/images/home.png" alt="homelogo">
         </div>
     </div>
 
-    <div class="footer">
+    <div class="container">
         <form>
-            <div class="heading">
+            <div class="headline">
                 <h2>
-                    <br>
                     Login
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="nicfill">
+                <div class="nicfillrow">
                     <label for="nicno">NIC No:</label>
-                    <input type="text"
-                           class="input"
-                           maxlength="20"
-                           size="20">
+                    <input type="text" class="input" maxlength="20" size="20">
                 </div>
 
-                <div class="passwordfill">
+                <div class="passwordfillrow">
                     <label for="password">Password:</label>
-                    <input type="text"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
+                    <input type="text" class="input" maxlength="20" size="20">
                 </div>
 
                 <button class="login-btn">Login</button>
 
                 <div class="forgotpassword">
-                    <h5 align="center">
-                        <a href="#toforgotpassword"
-                           class="toforgotpassword">Forgot Password?</a>
+                    <h5>
+                        <a href="../common/password/reset.html"><span>Forgot Password?</span></a>
                     </h5>
                 </div>
                 <div class="option">
-                    <h5 align="center">
-                        Already have an account? <a href="#tologin"
-                           class="tologin">Login</a>
+                    <h5>
+                        Don't hava an account? <a href="../pedestrian/signup.html"><span>Sign Up</span></a>
                     </h5>
                 </div>
             </div>
