--- a/user/vehicle/complaint/view.html
+++ b/user/vehicle/complaint/view.html
@@ -10,28 +10,28 @@
     <link rel="stylesheet" href="../../../resources/css/user/complain/view.css">
 </head>
 <body>
-    <div class="header" align="left">
-        <div class="logo1">
-            <img src="./logo_NTSF.png" alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>  
-        <div class="headline">
-            <h2 align="center">
-                <b>Driver</b>
+        <div class="title">
+            <h2>
+                Vehicle
             </h2>
         </div>
 
-        <div class="logo2" align="right">
-            <img src="./Account.png" alt="logo1">
+        <div class="accountlogo">
+            <img src="../../../resources/images/Account.png" alt="accountlogo">
         </div>
     </div> 
     <br>
-    <div class="menu" align="center">
+    <div class="optionbar">
         <div class="option1">
             <h3>View Fines</h3>
         </div>
         
         <div class="devider">
-            <h3><b>|</b></h3>
+            <h3>|</h3>
         </div> 
 
         <div class="option2">
@@ -39,7 +39,7 @@
         </div>
     </div>
     
-    <div class="footer">
+    <div class="container">
         <table>
                 <tr>
                     <th>Complain Number</th>
