--- a/homepage/user.html
+++ b/homepage/user.html
@@ -7,57 +7,50 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>
-        Homepage-Users
+        Homepage
     </title>
-    <link rel="stylesheet"
-          href="../Resources/CSS/User/homepage-user.css">
+    <link rel="stylesheet" href="../resources/css/user/homepage.css">
 </head>
 
 <body>
     <div class="header">
-        <div class="logo">
-            <img src="../Resources/All-Images/logo_NTSF.png"
-                 alt="logo">
+        <div class="ntsflogo">
+            <img src="../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>
 
-        <div class="chooselanguage"
-             align="right">
-            <div class="sinhala"
-                 align="right">
+        <div class="chooselanguage">
+            <div class="sinhala">
                 <button class="Sinhala">Sinhala</button>
             </div>
 
-            <div class="english"
-                 align="right">
+            <div class="english">
                 <button class="English">English</button>
             </div>
 
-            <div class="tamil"
-                 align="right">
+            <div class="tamil">
                 <button class="Tamil">Tamil</button>
             </div>
         </div>
     </div>
 
-    <div class="head">
-        <h1 align="center">
+    <div class="title">
+        <h1>
             National Traffic Spot Fine System
         </h1>
     </div>
 
-    <main class="footer">
+    <main class="container">
         <div class="chooseoption">
             <div class="Driver">
-                <a href="../User/Driver/login-driver.html"><button class="driver-button">Driver</button></a>
+                <a href="../user/driver/signup/index.html"><button class="driver-button">Driver</button></a>
             </div>
 
             <div class="Vehicle">
-                <a href="../User/Vehicle/login-vehicle.html"><button class="vehicle-button">Vehicle</button></a>
+                <a href="../user/vehicle/signup.html"><button class="vehicle-button">Vehicle</button></a>
             </div>
 
             <div class="Pedestrian">
-                <a href="../User/Pedestrian/login-pedestrian.html"><button
-                            class="pedestrian-button">Pedestrian</button></a>
+                <a href="../user/pedestrian/signup.html"><button class="pedestrian-button">Pedestrian</button></a>
             </div>
         </div>
     </main>
@@ -73,5 +66,4 @@
     </div>
 
 </body>
-
 </html>
