--- a/police/signup/signup.html
+++ b/police/signup/signup.html
@@ -5,83 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Sign Up-Driver
+        Sign Up-Policeman
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../resources/css/police/SignUp/signup.css">
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            <img src="./logo_NTSF.png" alt="logo">
+        <div class="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div> 
 
-        <div class="chooselanguage" align="right">
-        <div class="sinhala" align="right">
+        <div class="chooselanguage">
+        <div class="sinhala">
             <button class="Sinhala">Sinhala</button>
         </div>  
 
-        <div class="english" align="right">
+        <div class="english">
             <button class="English">English</button>
         </div>
 
-        <div class="tamil" align="right">
+        <div class="tamil">
             <button class="Tamil">Tamil</button>
         </div>
         </div>
     </div> 
 
-    <div class="head">
-        <h1 align="center">
+    <div class="heading">
+        <h1>
                 National Traffic Spot Fine System
         </h1> 
     </div>
 
     <table><tr><td>
-    <div class="footer">
+    <div class="container">
             <form>
-                <div class="heading">
+                <div class="headline">
                     <h2>
                         <br>
                         Sign Up 
                     </h2> 
                 </div>
                 <div class="filldetails">
-                    <div class="policeidfill">
+                    <div class="policeidfillrow">
                         <label for="policeid">Police Id:</label>
                         <input type="text" class="input"maxlength="20" size="20"> 
                         <br>
                     </div>
-                    <div class="nicfill">
+                    <div class="nicfillrow">
                         <label for="nicno">NIC No:</label>
                         <input type="text" class="input"maxlength="20" size="20"> 
                         <br> 
                     </div>
-                    <div class="emailfill">
-                        <label for="email">e-mail:</label>
+                    <div class="emailfillrow">
+                        <label for="email">E-mail:</label>
                         <input type="text" class="input"maxlength="20" size="20">  
                         <br>
                     </div>
-                    <div class="mobilefill">
+                    <div class="mobilefillrow">
                         <label for="mobileno">Mobile:</label>
                         <input type="text" class="input" maxlength="15" size="20"> 
                         <br>
                     </div>
-                    <div class="passwordfill1">
+                    <div class="newpasswordfillrow">
                         <label for="newpassword">New Password:</label>
                         <input type="text" class="input" maxlength="20" size="20">
                         <br>
                     </div>
-                    <div class="passwordfill2">
+                    <div class="reenterpasswordfillrow">
                         <label for="newpassword" length="60">New Password:</label>
                         <input type="text" class="input" maxlength="20" size="20">
                         <br>
                     </div>
 
-                    <button class="signup-btn">Sign Up</button> 
+                    <button class="signup-button">Sign Up</button> 
 
                     <div class="option">
                         <h5 align="center">
-                            Already have an account? <a href="#tologin" class="tologin">Login</a><!--<button class="login-btn"" text color="blue">Login</button>-->
+                            Already have an account? <span>Login</span>
                         </h5>
                     </div>
                 </div> 
@@ -92,7 +92,7 @@
 </td><td>
 <div class="list">
     <ul>
-        <li><b>Only the police officers who are registered to the system by the police department can sign up.</b></li>
+        <li><b>Only the police officers who are registered to the system by the police <br>department can sign up.</b></li>
         <li><b>Who can get registered to the website
                 <br align="center">Police OIC
                 <br align="center">Police Officers
