--- a/user/driver/login.html
+++ b/user/driver/login.html
@@ -10,78 +10,56 @@
     <title>
         Login-Driver
     </title>
-    <link rel="stylesheet"
-          href="../../resources/css/user/login.css">
+    <link rel="stylesheet" href="../../resources/css/user/login.css">
     <script src="../../resources/js/user/driver/login.js"></script>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
             crossorigin="anonymous"></script> -->
 </head>
 
 <body>
-    <div class="header"
-         align="left">
-        <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
-                 alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>
-        <div class="headline">
-            <h2 align="center">
-                <b>Driver</b>
+        <div class="title">
+            <h2>
+                Driver
             </h2>
         </div>
 
-        <div class="logo2"
-             align="right">
-            <a href="#"><img src="../../Resources/All-Images/home.png"
-                     alt="logo1"></a>
+        <div class="homelogo">
+            <img src="../../resources/images/home.png" alt="homelogo">
         </div>
     </div>
 
-    <div class="footer">
+    <div class="container">
         <form>
-            <div class="heading">
+            <div class="headline">
                 <h2>
-                    <br>
                     Login
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="licensefill">
+                <div class="licensefillrow">
                     <label for="licenseno">License No:</label>
-                    <input type="text"
-                           id="licenceNo"
-                           class="input"
-                           maxlength="20"
-                           size="20">
+                    <input type="text" id="licenceNo" class="input" maxlength="20" size="20">
                 </div>
 
-                <div class="passwordfill">
+                <div class="passwordfillrow">
                     <label for="password">Password:</label>
-                    <input type="text"
-                           id="password"
-                           class="input"
-                           maxlength="20"
-                           size="20">
+                    <input type="text" id="password" class="input" maxlength="20" size="20">
                     <br>
                 </div>
 
-                <button class="login-btn"
-                        onclick="submitLogin()"
-                        ,
-                        ondblclick="matchPassword()">Login</button>
-
+                <button class="login-btn" onclick="submitLogin()",ondblclick="matchPassword()">Login</button>
+                <br>
                 <div class="forgotpassword">
-                    <h5 align="center">
-                        <a href="../../User/Driver/signup-driver.html"
-                           class="toforgotpassword">Forgot Password?</a>
-                    </h5>
+                    <a href="../driver/password/reset.html"><span><u>Forgot Password? </u></span></a>
                 </div>
                 <div class="option">
-                    <h5 align="center">
-                        Do not have an account? <a href="../../User/Driver/signup-driver.html"
-                           class="tosignup">Sign Up</a>
+                    <h5>
+                        Do not have an account? <a href="../driver/signup/index.html"><span><u>Sign Up</u></span></a>
                     </h5>
                 </div>
             </div>
