--- a/user/driver/signup/index.html
+++ b/user/driver/signup/index.html
@@ -11,105 +11,72 @@
         Sign Up-Driver
     </title>
     <link rel="stylesheet"
-          href="../../Resources/CSS/User/signup.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Poppins">
-    <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
-            crossorigin="anonymous"></script> -->
+          href="../../../resources/css/user/signup/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js" crossorigin="anonymous"></script> -->
     <script src="../../Resources/JS/User/Driver/signup-driver.js"></script>
 </head>
 
 <body>
-    <div class="header"
-         align="left">
-        <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
-                 alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../../resources/images/logo_NTSF.png">
         </div>
-        <div class="headline">
-            <h2 align="center">
-                <b>Driver</b>
+        <div class="title">
+            <h2>
+                Driver
             </h2>
         </div>
 
-        <div class="logo2"
-             align="right">
-            <img src="../../Resources/All-Images/home.png"
-                 alt="logo1">
+        <div class="homelogo">
+            <img src="../../../resources/images/home.png" alt="homelogo">
         </div>
     </div>
 
-    <div class="footer">
+    <div class="container">
         <form>
-            <div class="heading">
+            <div class="headline">
                 <h2>
-                    <br>
                     Sign Up
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="licencefill">
+                <div class="licencefillrow">
                     <label for="licenceno">Licence No:</label>
-                    <input type="text"
-                           id="licenceNo"
-                           class="input"
-                           maxlength="20"
-                           size="20"
-                           required>
-                    <br>
+                    <input type="text" id="licenceNo" class="input" maxlength="20" size="20" required>
                 </div>
-                <div class="nicfill">
+
+                <div class="nicfillrow">
                     <label for="nicno">NIC No:</label>
-                    <input type="text"
-                           id="nic"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
+                    <input type="text" id="nic" class="input" maxlength="20" size="20">
                 </div>
-                <div class="emailfill">
+
+                <div class="emailfillrow">
                     <label for="email">e-mail:</label>
-                    <input type="email"
-                           id="email"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
-                </div>
-                <div class="mobilefill">
+                    <input type="email" id="email" class="input" maxlength="20" size="20">
+                </div> 
+
+                <div class="mobilefillrow">
                     <label for="mobileno">Mobile:</label>
-                    <input type="text"
-                           id="mobileNo"
-                           class="input"
-                           maxlength="15"
-                           size="20">
-                    <br>
+                    <input type="text" id="mobileNo" class="input" maxlength="15" size="20">
                 </div>
-                <div class="passwordfill1">
+
+                <div class="createpasswordfillrow">
                     <label for="createpassword">Create Password:</label>
-                    <input type="password"
-                           id="password"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
-                </div>
-                <div class="passwordfill2">
-                    <label for="reenterpassword"
-                           length="60">Re-enter Password:</label>
-                    <input type="password"
-                           id="rePassword"
-                           class="input">
+                    <input type="password" id="password" class="input" maxlength="20" size="20">
+                </div> 
+
+                <div class="reenterpasswordfillrow">
+                    <label for="reenterpassword" length="60">Re-enter Password:</label>
+                    <input type="password" id="rePassword" class="input">
                     <br>
                 </div>
 
-                <button class="signup-btn"
-                        onclick="matchPassword(), submitSignup()">Sign Up</button>
+                <a href="./verification.html"><button class="signup-btn" onclick="matchPassword(), submitSignup()">Sign Up</button></a>
 
                 <div class="option">
-                    <h5 align="center">
-                        Already have an account? <a href="../../User/Driver/login-driver.html"
-                           class="tologin">Login</a>
+                    <h5>
+                        Already have an account? <a href="../login.html"><span><u>Login</u></span></a>
                     </h5>
                 </div>
             </div>
