--- a/user/pedestrian/signup.html
+++ b/user/pedestrian/signup.html
@@ -9,52 +9,39 @@
     <title>
         Sign Up-Pedetrian
     </title>
-    <link rel="stylesheet"
-          href="./style.css">
-    <link rel="stylesheet"
-          href="../../Resources/CSS/User/signup.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="../../resources/css/user/signup/index.css">
+    <link rel="stylesheet" href="../../Resources/CSS/User/signup.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script src="../../Resources/JS/User/Pedestrian/signup-pedestrian.js"></script>
 </head>
 
 <body>
-    <div class="header"
-         align="left">
-        <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
-                 alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>
-        <div class="headline">
-            <h2 align="center">
-                <b>Pedetrian</b>
+        <div class="title">
+            <h2>
+                Pedetrian
             </h2>
         </div>
 
-        <div class="logo2"
-             align="right">
-            <img src="../../Resources/All-Images/cross.png"
-                 alt="logo1">
+        <div class="homelogo">
+            <img src="../../resources/images/home.png" alt="homelogo">
         </div>
     </div>
 
-    <div class="footer">
+    <div class="container">
         <form>
-            <div class="heading">
+            <div class="headline">
                 <h2>
-                    <br>
                     Sign Up
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="nicnodfill">
+                <div class="nicnofillrow">
                     <label for="nicno">NIC No:</label>
-                    <input type="text"
-                           id="nic"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
+                    <input type="text" id="nic" class="input" maxlength="20" size="20">
                 </div>
                 <!-- <div class="nicissuedatefill">
                     <label for="nicissuedate">NIC Issue Date:</label>
@@ -64,48 +51,34 @@
                            size="20">
                     <br>
                 </div> -->
-                <div class="emailfill">
-                    <label for="email">e-mail:</label>
-                    <input type="text"
-                           id="email"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
-                </div>
-                <div class="mobilefill">
+                <div class="emailfillrow">
+                    <label for="email">E-mail:</label>
+                    <input type="text" id="email" class="input" maxlength="20" size="20">
+                </div> 
+
+                <div class="mobilefillrow">
                     <label for="mobileno">Mobile:</label>
                     <input type="text"
                            id="mobileNo"
                            class="input"
                            maxlength="15"
                            size="20">
-                    <br>
                 </div>
-                <div class="passwordfill1">
+                <div class="createpasswordfillrow">
                     <label for="createpassword">Create Password:</label>
-                    <input type="text"
-                           id="password"
-                           class="input"
-                           maxlength="20"
-                           size="20">
-                    <br>
+                    <input type="text" id="password" class="input" maxlength="20" size="20">
                 </div>
                 <div class="passwordfill2">
                     <label for="reenterpassword"
                            length="60">Re-enter Password:</label>
-                    <input type="text"
-                           id="retype-password"
-                           class="input">
-                    <br>
+                    <input type="text" id="retype-password" class="input" maxlength="20" size="20">
                 </div>
 
                 <button class="signup-btn">Sign Up</button>
 
                 <div class="option">
                     <h5 align="center">
-                        Already have an account? <a href="#tologin"
-                           class="tologin">Login</a>
+                        Already have an account?<a href="../pedestrian/login.html"><span>Login</span></a>
                     </h5>
                 </div>
             </div>
