--- a/user/vehicle/fine/view.html
+++ b/user/vehicle/fine/view.html
@@ -7,45 +7,44 @@
     <title>
         Fine Check-Vehicle
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../../resources/css/user/fine/view.css">
 </head>
 <body>
-    <div class="header" align="left">
-        <div class="logo1">
-            <img src="./logo_NTSF.png" alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>  
         <div class="headline">
-            <h2 align="center">
-                <b>Vehicle</b>
+            <h2>
+                Vehicle
             </h2>
         </div>
 
-        <div class="logo2" align="right">
-            <img src="./Account.png" alt="logo1">
+        <div class="accountlogo">
+            <img src="../../../resources/images/Account.png" alt="accountlogo">
         </div>
     </div> 
     <br>
-    <div class="menu" align="center">
+    <div class="optionbar">
         <div class="option1">
             <h3>View Fines</h3>
         </div>
         
         <div class="devider">
-            <h3><b>|</b></h3>
+            <h3>|</h3>
         </div> 
 
         <div class="option2">
-            <h3><b><b>Complaint</b></b></h3>
+            <h3><b>Complaint</b></h3>
         </div>
     </div>
     
     <div class="details"> 
         <div class="name">
             <h3>Vehicle No : cp KT-4193</h3>
-            <br>
         </div>
 
-        <div class="footer">
+        <div class="container">
             <table>
                     <tr>
                         <th>Ticket No</th>
