--- a/user/vehicle/login.html
+++ b/user/vehicle/login.html
@@ -9,48 +9,38 @@
     <title>
         Login-Vehicle
     </title>
-    <link rel="stylesheet"
-          href="../../Resources/CSS/User/login.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="../../resources/css/user/login.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <script src="../../Resources/JS/User/Driver/login-vehicle.js"></script>
 </head>
 
 <body>
-    <div class="header"
-         align="left">
-        <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
-                 alt="logo1">
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../resources/images/logo_NTSF.png" alt="ntsflogo">
         </div>
-        <div class="headline">
-            <h2 align="center">
-                <b>Vehicle</b>
+        <div class="title">
+            <h2>
+                Vehicle
             </h2>
         </div>
 
-        <div class="logo2"
-             align="right">
-            <img src="../../Resources/All-Images/home.png"
-                 alt="logo2">
+        <div class="homelogo">
+            <img src="../../resources/images/home.png" alt="homelogo">
         </div>
     </div>
 
-    <div class="footer">
+    <div class="container">
         <form>
-            <div class="heading">
+            <div class="headline">
                 <h2>
-                    <br>
                     Login
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="vehiclenofill">
+                <div class="vehiclenofillrow">
                     <label for="vehicleno">Vehicle No:</label>
-                    <input type="text"
-                           class="input"
-                           maxlength="20"
-                           size="20">
+                    <input type="text" class="input" maxlength="20" size="20">
                 </div>
                 <!-- <div class="chasisnofill">
                     <label for="chasisno">Chasis No:</label>
@@ -59,12 +49,9 @@
                            maxlength="20"
                            size="20">
                 </div> -->
-                <div class="password">
+                <div class="passwordfillrow">
                     <label for="password">Password</label>
-                    <input type="password"
-                           class="input"
-                           maxlength="20"
-                           size="20">
+                    <input type="password" class="input" maxlength="20" size="20">
                 </div>
 
                 <button class="login-btn">Login</button>
