add viewcomplaintbyID link

--- a/user/driver/view-Complaint/index.html
+++ b/user/driver/view-Complaint/index.html
@@ -35,7 +35,7 @@
             </div> 
     
             <div class="option2">
-                <h3><b>Complaint</b></h3>
+                <h3 onclick="window.location.href='sample.html'" ><b>Complaint</b></h3>
             </div>
         </div>
         
