minor changes with file links

--- a/user/driver/addComplaint/addComplaint.html
+++ b/user/driver/addComplaint/addComplaint.html
@@ -10,7 +10,7 @@
         Add Complaint-Driver
     </title>
     <link rel="stylesheet"
-          href="../../../resources/css/user/complain/addcomplaint.css">
+          href="../../../resources/css/user/complain/add.css">
 </head>
 
 <body>
@@ -114,6 +114,8 @@
     </div>
     </form>
     </div>
+
+    <script src="../../../resources/js/user/driver/addComplaint.js"></script>
 </body>
 
 </html>
