--- a/user/driver/login.html
+++ b/user/driver/login.html
@@ -30,9 +30,7 @@
         </div>
 
         <a href="../../homepage/user.html">
-            <img src="../../resources/images/home.png"
-                 alt="home_logo"
-                 class="homelogo">
+            <img src="../../resources/images/home.png" alt="home_logo" class="homelogo">
         </a>
     </div>
 
