--- a/user/driver/view-Complaint/index.html
+++ b/user/driver/view-Complaint/index.html
@@ -26,7 +26,7 @@
         <br>
         <div class="optionbar">
             <div class="option1">
-                <h3>View Fines</h3>
+                <a href="../../common/fine/view.html"><h3>View Fines</h3></a>
             </div>
             
             <div class="devider">
