--- a/user/driver/addComplaint/addComplaint.html
+++ b/user/driver/addComplaint/addComplaint.html
@@ -98,8 +98,7 @@
 
             <div class="complaintnofillrow">
                 <label for="title">Complaint No:</label>
-                <input type="text"
-                       name="complaint_no"
+                <input type="text" name="complaint_no"
                        class="input"
                        maxlength="30"
                        size="60">
