added addpolicman files

--- a/police/policeman/addPoliceman.html
+++ b/police/policeman/addPoliceman.html
@@ -10,11 +10,46 @@
         <table>
             <tr>
                 <td>
-                    
+                    <label for="name">Name</label>
+                </td>
+                <td>
+                    <input type="text" name="name" id="name">
                 </td>
             </tr>
+                <td>
+                    <label for="police_id">Police ID</label>
+                </td>
+                <td>
+                    <input type="text" name="police_id" id="police_id">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="nic">NIC</label>
+                </td>
+                <td>
+                    <input type="text" name="nic" id="nic">
+                </td>
+            </tr>
+                <td>
+                    <label for="rank">Rank</label>
+                </td>
+                <td>
+                    <input type="text" name="rank" id="rank">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="police_station">Police Station</label>
+                </td>
+                <td>
+                    <input type="text" name="police_station" id="police_station">
+                </td>
         </table>
     </form>
+
+    <button onclick="addPoliceman()" type="submit">Add Policeman</button>
     
+    <script src="../../resources/js/police/policeman/policeman.js"></script>
 </body>
 </html>
