--- a/user/driver/addComplaint/addComplaint.html
+++ b/user/driver/addComplaint/addComplaint.html
@@ -71,6 +71,7 @@
                 <label for="title">User ID:</label>
                 <input type="text"
                        name="user_id"
+                       id="user_id"
                        class="input"
                        maxlength="30"
                        size="60">
@@ -81,6 +82,7 @@
                 <label for="title">Title:</label>
                 <input type="text"
                        name="title"
+                       id="title"
                        class="input"
                        maxlength="30"
                        size="60">
@@ -91,14 +93,15 @@
                 <div class="description">
                     <label for="description">Description:</label>
                 </div>
-                <textarea class="textarea"></textarea>
+                <input type="text" name="description" id="description">
+                <!-- <textarea class="textarea"></textarea> -->
                 <!--<textarea name="description" maxlength="1000" cols="25" rows="6"></textarea>-->
                 <br>
             </div>
 
             <div class="complaintnofillrow">
                 <label for="title">Complaint No:</label>
-                <input type="text" name="complaint_no"
+                <input type="text" name="complaint_no" id="complaint_no"
                        class="input"
                        maxlength="30"
                        size="60">
@@ -108,8 +111,8 @@
             <dic class="buttens">
                 <button class="cancel-btn"
                         type="button">Cancel</button>
-                <button class="submit-btn" onclick="submitComplaint()"
-                        type="submit">Submit</button>
+                <button class="submit-btn" onclick="addComplaint()"
+                        type="submit">Add Complaint</button>
     </div>
     <!-- </form> -->
     </div>
