add httprequest to complaint.js

--- a/police/policeman/addPoliceman.html
+++ b/police/policeman/addPoliceman.html
@@ -14,14 +14,14 @@
                     <label for="name">Name</label>
                 </td>
                 <td>
-                    <input type="text" name="name" id="name" maxlength="" required>
+                    <input type="text" name="name" id="name" maxlength="100" required>
                 </td>
             </tr>
                 <td>
                     <label for="police_id">Police ID</label>
                 </td>
                 <td>
-                    <input type="text" name="police_id" id="police_id" maxlength="" required>
+                    <input type="text" name="police_id" id="police_id" maxlength="10" required>
                 </td>
             </tr>
             <tr>
