--- a/user/driver/addComplaint/addComplaint.html
+++ b/user/driver/addComplaint/addComplaint.html
@@ -112,7 +112,7 @@
                 <button class="cancel-btn"
                         type="button">Cancel</button>
                 <button class="submit-btn" onclick="addComplaint()"
-                        type="submit">Add Complaint</button>
+                        type="button">Add Complaint</button>
     </div>
     <!-- </form> -->
     </div>
