--- a/user/driver/addComplaint/addComplaint.html
+++ b/user/driver/addComplaint/addComplaint.html
@@ -53,6 +53,7 @@
                 Add Complaint
             </h3>
         </div>
+        <form action="#">
         <!-- <form action="http://localhost:8080/ntsf/addcomplaint"
               method="post"> -->
             <!-- <div class="filldetails">
@@ -111,10 +112,10 @@
             <dic class="buttens">
                 <button class="cancel-btn"
                         type="button">Cancel</button>
-                <button class="submit-btn" onclick="addComplaint()"
+                <button class="submit-btn" id="addComplaintButton" onclick="addComplaint()"
                         type="button">Add Complaint</button>
     </div>
-    <!-- </form> -->
+    </form>
     </div>
 
     <script src="../../../resources/js/user/driver/addComplaint.js"></script>
