--- a/user/driver/view-Complaint/index.html
+++ b/user/driver/view-Complaint/index.html
@@ -57,7 +57,7 @@
             </table>
         </div>  
 
-        <button class="addcomplaint-btn">Add Complaint</button>
+        <a href="../addComplaint/addComplaint.html"><button class="addcomplaint-btn">Add Complaint</button></a>
     
     </body>
     </html>
