--- a/police/policeman/addPoliceman.html
+++ b/police/policeman/addPoliceman.html
@@ -36,7 +36,7 @@
                     <label for="rank">Rank</label>
                 </td>
                 <td>
-                   <input name="rank" id="rank"></input>
+                   <select name="rank" id="rank" required></select>
                 </td>
             </tr>
             <tr>
