--- a/police/policeman/addPoliceman.html
+++ b/police/policeman/addPoliceman.html
@@ -34,20 +34,32 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="rank">Rank</label>
                 <input type="text" placeholder="eg: OIC" id="rank"/>
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
-            </div>
+            </div> -->
             <div class="form-control">
-                <label for="police_station">Police Station</label>
-                <input type="text" placeholder="eg: Dehiwala" id="police_station"/>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
+                <label for="rankOptions">Rank</label>
+                <div class="options" id="rankOptions">
+                    <div class="hide-option option" id="hide-rankOption">Select the rank</div>
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                </div>
                 <small>Error message</small>
             </div>
+            <div class="form-control">
+                <label for="police_stationOptions">Police Station</label>
+                <div class="options" id="police_stationOptions">
+                    <div class="hide-option option" id="hide-police_stationOption">Select the Police Station</div>
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                </div>
+                <small>Error message</small>
+            </div>
+
             <button>Submit</button>
         </form>
     
