add view policeman UI

--- a/police/policeman/addPoliceman.html
+++ b/police/policeman/addPoliceman.html
@@ -27,21 +27,21 @@
             <form action="#" id="form" class="form">
                 <div class="form-control">
                     <label for="name">Name</label>
-                    <input type="text" placeholder="eg: Suraif Muhammad" id="name" required/>
+                    <input type="text" placeholder="eg: Suraif Muhammad" id="name" />
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error message</small>
                 </div>
                 <div class="form-control">
                     <label for="police_id">Police_ID</label>
-                    <input type="text" placeholder="eg: 7109827" id="police_id" required/>
+                    <input type="text" placeholder="eg: 7109827" id="police_id" />
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error message</small>
                 </div>
                 <div class="form-control">
                     <label for="nic">NIC</label>
-                    <input type="text" placeholder="eg: 200019292837" id="nic" required/>
+                    <input type="text" placeholder="eg: 200019292837" id="nic" />
                     <i class="fas fa-check-circle"></i>
                     <i class="fas fa-exclamation-circle"></i>
                     <small>Error message</small>
