--- a/police/policeman/viewPoliceman.html
+++ b/police/policeman/viewPoliceman.html
@@ -3,20 +3,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../resources/css/police/policeman/viewPoliceman.css">
     <title>View Policeman</title>
 </head>
 <body>
-    <table>
-        <tr>
-            <th>name</th>
-            <th>police_id </th>
-            <th>nic</th>
-            <th>rank</th>
-            <th>OIC</th>
-        </tr>
-        <div id="policemanData"></div> <!--Here policeman data will be dynamically loaded-->
-    </table>
-
+    <div class="header">
+        <div class="logo">
+            <img src="../../resources/images/logo_NTSF.png" alt="logo">
+        </div>
+        <div class="userName">
+            <h1>Police Officers - Police man</h1>
+        </div>
+        <div class="homeButton">
+            <img src="../../resources/images/home.png" alt="homeButton" class="homeButtonImg">
+        </div>
+    </div>
+    <div class="container">
+        <h1>Policeman Information</h1>
+          <table class="rwd-table">
+            <tbody>
+              <tr>
+                <th>Name</th>
+                <th>Police_ID</th>
+                <th>NIC</th>
+                <th>Rank</th>
+                <th>Police Station</th>
+              </tr>
+              <tr>
+                <td data-th="Supplier Code">
+                  UPS5005
+                </td>
+                <td data-th="Supplier Name">
+                  UPS
+                </td>
+                <td data-th="Invoice Number">
+                  ASDF19218
+                </td>
+                <td data-th="Invoice Date">
+                  06/25/2016
+                </td>
+                <td data-th="Due Date">
+                  12/25/2016
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
     <script src="../../resources/js/police/policeman/viewPoliceman.js"></script>
 </body>
 </html>
