--- a/user/addComplaint/AdddComplaint.html
+++ b/user/addComplaint/AdddComplaint.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="form-control">
                         <label for="description">Description</label>
-                        <input type="text" placeholder="eg: 7109827" id="description" />
+                        <textarea type="text" placeholder="Explain your issue clearly" id="description"></textarea>
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
