add nic valdation ls

--- a/suraif-archive/addComplaint.html
+++ b/suraif-archive/addComplaint.html
@@ -54,8 +54,8 @@
             </h3>
         </div>
         <form action="#">
-        <!-- <form action="http://localhost:8080/ntsf/addcomplaint"
-              method="post"> -->
+        <form action="http://localhost:8080/ntsf/addcomplaint"
+              method="post">
             <!-- <div class="filldetails">
                         <div class="namefill">
                             <label for="name">Name:</label>
