--- a/police/login.html
+++ b/police/login.html
@@ -1,16 +1,26 @@
-<div class="wrapper">
-    <form class="login">
-      <p class="title">Log in</p>
-      <input type="text" placeholder="Username" autofocus />
-      <i class="fa fa-user"></i>
-      <input type="password" placeholder="Password" />
-      <i class="fa fa-key"></i>
-      <a href="#">Forgot your password?</a>
-      <button>
-        <i class="spinner"></i>
-        <span class="state">Log in</span>
-      </button>
-    </form>
-    <footer><a target="blank" href="http://boudra.me/">boudra.me</a></footer>
-    </p>
-  </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="wrapper">
+        <form class="login">
+          <p class="title">Log in</p>
+          <input type="text" placeholder="Username" autofocus />
+          <i class="fa fa-user"></i>
+          <input type="password" placeholder="Password" />
+          <i class="fa fa-key"></i>
+          <a href="#">Forgot your password?</a>
+          <button>
+            <i class="spinner"></i>
+            <span class="state">Log in</span>
+          </button>
+        </form>
+        <footer><a target="blank" href="http://boudra.me/">boudra.me</a></footer>
+        </p>
+      </div>
+</body>
+</html>
