--- a/police/login.html
+++ b/police/login.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../resources/css/police/login.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,5 +23,7 @@
         <footer><a target="blank" href="http://boudra.me/">boudra.me</a></footer>
         </p>
       </div>
+
+      <script src="../resources/js/police/login.js"></script>
 </body>
 </html>
