--- a/police/login.html
+++ b/police/login.html
@@ -20,7 +20,7 @@
             <span class="state">Log in</span>
           </button>
         </form>
-        <footer><a target="blank" href="http://boudra.me/">boudra.me</a></footer>
+        <!-- <footer><a target="blank" href="http://boudra.me/">boudra.me</a></footer> -->
         </p>
       </div>
 
