--- a/police/login.html
+++ b/police/login.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header">
+        <div class="ntsflogo">
+            <img src="../../../resources/images/logo_NTSF.png"
+                 alt="ntsflogo">
+        </div>
+        <div class="title">
+            <h2>
+                <b>National Traffic Spot Fine System</b>
+            </h2>
+        </div>
+
+        <a href="../../common/profile/index.html">
+            <img src="../../../resources/images/Account.png"
+                 alt="Profile Logo"
+                 class="profileLogo">
+        </a>
+    </div>
+
     <div class="wrapper">
         <form class="login">
           <p class="title">Log in</p>
