--- a/suraif-archive/template copy/index.html
+++ b/suraif-archive/template copy/index.html
@@ -54,21 +54,23 @@
         <div class="all">
             <div class="container">
                 <h1>Policeman Information</h1>
-                  <table class="rwd-table" id="table">
-                    <tbody>
-                      <div class="tableheading">
-                        <tr>
-                          <th>Name</th>
-                          <th>Police_ID</th>
-                          <th>NIC</th>
-                          <th>Rank</th>
-                          <th>Police Station</th>
-                        </tr>
-                      </div>
-                      <div id="policemanData"></div>
-                    </tbody>
-                  </table>
+                <div class="tableSection">
+                    <table class="rwd-table" id="table">
+                        <tbody>
+                          <div class="tableheading">
+                            <thead>
+                              <th>Name</th>
+                              <th>Police_ID</th>
+                              <th>NIC</th>
+                              <th>Rank</th>
+                              <th>Police Station</th>
+                            </thead>
+                          </div>
+                          <div id="policemanData"></div>
+                        </tbody>
+                      </table>
                 </div>
+            </div>
         </div>
     <script src="/resources/js/police/policeman/viewPoliceman.js"></script>
 </body>
