fixed view page logo

--- a/suraif-archive/template copy/index.html
+++ b/suraif-archive/template copy/index.html
@@ -12,7 +12,7 @@
             <div class="dashboto-logo">
                 <img src="/resources/images/logo_NTSF.png" alt="NTSF logo" class="ntsflogo">
             </div>
-            <p class="logo"><b>NTSF</b></p>
+            <h2 class="logo"><b>NTSF</b></h2>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
         <button class="main">IGP Dashboard</button>
