--- a/police/igp/addPoliceman.html
+++ b/police/igp/addPoliceman.html
@@ -18,22 +18,22 @@
         <button class="main">IGP Dashboard</button>
         <div class="clear"></div>
         <ul class="menu">
-            <a href="">
+            <a href="../igp/viewPoliceman.html">
                 <i class="fa fa-dashboard"></i>
                 View Policeman
             </a>
             <br>
-            <a href="">
+            <a href="../igp/addPoliceman.html">
                 <i class="fa fa-tasks"></i>
                 Add Policeman
             </a>
             <a href="">
                 <i class="fa fa-book"></i>
-                View Reports
+                View Police Station
             </a>
             <a href="">
                 <i class="fa fa-newspaper-o"></i>
-                News
+                Add Police Station
             </a>
             <a href="">
                 <i class="fa fa-money"></i>
