--- a/police/igp/addFine.html
+++ b/police/igp/addFine.html
@@ -36,9 +36,17 @@
                 Add Police Station
             </a>
             <a href="">
+                <i class="fa fa-viewFine"></i>
+                View Fine
+            </a>
+            <a href="">
+                <i class="fa fa-addFine"></i>
+                Add Fine
+            </a>
+            <!-- <a href="">
                 <i class="fa fa-money"></i>
                 Logout
-            </a>
+            </a> -->
         </ul>
     </div>
     
