--- a/police/igp/addPoliceman.html
+++ b/police/igp/addPoliceman.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../resources/css/police/igp/addPoliceman.css">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/251590f28b.css" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -102,6 +103,6 @@
                 </div>
             </div>
         </div>
-    <script src="/resources/js/police/policeman/addPoliceman.js"></script>
+    <script src="../../resources/js/police/policeman/addPoliceman.js"></script>
 </body>
 </html>
