--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -72,6 +72,6 @@
                 </div>
             </div>
         </div>
-    <script src="/resources/js/police/policeman/viewPoliceman.js"></script>
+    <script src="../../resources/js/police/policeman/viewPoliceman.js"></script>
 </body>
 </html>
