--- a/police/login.html
+++ b/police/login.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="wrapper">
-        <form class="login">
+        <form class="login" id="form">
           <p class="title">Log in</p>
           <input type="text" id="username" placeholder="Username" autofocus />
           <i class="fa fa-user"></i>
