--- a/avishi_user/fine/view_fine.html
+++ b/avishi_user/fine/view_fine.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <script src="/resources/js/police/policeman/viewFine.js"></script>
+        <script src="./view_fine.js"></script>
     </body>
 
 </html>
