--- a/avishi_user/fine/view_fine.html
+++ b/avishi_user/fine/view_fine.html
@@ -29,20 +29,20 @@
             <button class="main">User Dashboard</button>
             <div class="clear"></div>
             <ul class="menu">
-                <a href="">
+                <a href="#">
                     <i class="fa fa-dashboard"></i>
                     View Fines
                 </a>
                 <br>
-                <a href="">
+                <a href="../complaint/add_complaint.html">
                     <i class="fa fa-tasks"></i>
                     Add Complaints
                 </a>
-                <a href="">
+                <a href="../complaint/view_complaint.html">
                     <i class="fa fa-book"></i>
                     View Complaints
                 </a>
-                <a href="">
+                <a href="../login/login.html">
                     <i class="fa fa-newspaper-o"></i>
                     Logout
                 </a>
