--- a/avishi_user/complaint/view_complaint.html
+++ b/avishi_user/complaint/view_complaint.html
@@ -8,56 +8,57 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="../fine/view_fine.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Document</title>
 </head>
 
 <body onload="loadFineDetails()">
     <!-- Repeating side bar starts from here -->
-
-    <body>
-        <div class="DashBoardOption">
-            <div class="logo">
-                <div class="dashboto-logo">
-                    <img src="/resources/images/logo_NTSF.png"
-                         alt="NTSF logo"
-                         class="ntsflogo">
-                </div>
-                <p class="logo"><b>NTSF</b></p>
+    <div class="DashBoardOption">
+        <div class="logo">
+            <div class="dashboto-logo">
+                <img src="/resources/images/logo_NTSF.png"
+                     alt="NTSF logo"
+                     class="ntsflogo">
             </div>
-            <p class="tagline">National Traffic Spot Fine System</p>
-            <button class="main">User Dashboard</button>
-            <div class="clear"></div>
-            <ul class="menu">
-                <a href="../fine/view_fine.html">
-                    <i class="fa fa-dashboard"></i>
-                    View Fines
-                </a>
-                <br>
-                <a href="./add_complaint.html">
-                    <i class="fa fa-tasks"></i>
-                    Add Complaints
-                </a>
-                <a href="./view_complaint.html">
-                    <i class="fa fa-book"></i>
-                    View Complaints
-                </a>
-                <a href="../login/login.html">
-                    <i class="fa fa-newspaper-o"></i>
-                    Logout
-                </a>
-            </ul>
+            <p class="logo"><b>NTSF</b></p>
         </div>
+        <p class="tagline">National Traffic Spot Fine System</p>
+        <button class="main">User Dashboard</button>
+        <div class="clear"></div>
+        <ul class="menu">
+            <a href="../fine/view_fine.html">
+                <i class="fa fa-dashboard"></i>
+                View Fines
+            </a>
+            <br>
+            <a href="../complaint/add_complaint.html">
+                <i class="fa fa-tasks"></i>
+                Add Complaint
+            </a>
+            <a href="../complaint/view_complaint.html">
+                <i class="fa fa-book"></i>
+                View Complaints
+            </a>
+            <!-- <a href="">
+                <i class="fa fa-newspaper-o"></i>
+                Add Police Station
+            </a> -->
+            <a href="../login/login.html">
+                <i class="fa fa-money"></i>
+                Logout
+            </a>
+        </ul>
+    </div>
 
-        <!-- Dashboard heading -->
-        <div class="dashboard-heading">
-            <div class="panel">
-                <div ng-app="app"
-                     ng-controller="coin">
-                    <a href="#">
-                        <p class="btc-price">Avishi Ganepola</p>
-                    </a>
-                </div>
+    <!-- Dashboard heading -->
+    <div class="dashboard-heading">
+        <div class="panel">
+            <div ng-app="app"
+                 ng-controller="coin">
+                <p class="btc-price">Avishi Ganepola</p>
             </div>
         </div>
         <!-- Repeating side bar ends here -->
@@ -85,6 +86,6 @@
             </div>
         </div>
         <script src="./view_complaint.js"></script>
-    </body>
+</body>
 
 </html>
