fixed oic link in login

--- a/police/login.html
+++ b/police/login.html
@@ -38,13 +38,10 @@
             <small>Error message</small>
           </div>
           <a href="#">Forgot your password?</a>
-          <button>
-            <i class="spinner"></i>
-            <span class="state">Log in</span>
+          <button id="button">Log in
           </button>
         </form>
       </div>
-
       <script src="../resources/js/police/login.js"></script>
 </body>
 </html>
