delete popup added

--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -79,6 +79,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- Model to popup Are you sure want to delete?? -->
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close"></span>
+              <p>Are you sure you want to delete ?</p>
+              <button id="modal-yes">Yes</button>
+              <button id="modal-no">No</button>
+            </div>
+          </div>
     <script src="../../resources/js/police/policeman/viewPoliceman.js"></script>
 </body>
 </html>
