Add Addpoliceman button to viewPoliceman.html

--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -55,6 +55,9 @@
     
     <!-- Dashbboard cards -->
         <div class="all">
+            <a href="../igp/addPoliceman.html">
+                <button id="addPoliceman" class="addPolicemanButton">Add Policeman</button>
+            </a>
             <div class="container">
                 <h1>Policeman Information</h1>
                 <div class="tableSection">
