remove addpoliceman from side panel

--- a/police/igp/addPoliceStation.html
+++ b/police/igp/addPoliceStation.html
@@ -23,13 +23,9 @@
         <ul class="menu">
             <a href="../igp/viewPoliceman.html">
                 <i class="fa fa-dashboard"></i>
-                View Policeman
+                Policeman
             </a>
             <br>
-            <a href="../igp/addPoliceman.html">
-                <i class="fa fa-tasks"></i>
-                Add Policeman
-            </a>
             <a href="../igp/viewPoliceStation.html">
                 <i class="fa fa-book"></i>
                 View Police Station
