Add new two tables for vehicle and pedestrian fines

--- a/user_service/user/fines/index.html
+++ b/user_service/user/fines/index.html
@@ -73,6 +73,7 @@
     <div class="container">
         <h1>Fines Details</h1>
         <div class="tableSection">
+            <h1>Driver Fines</h1>
             <table class="fines-table"
                    id="table">
                 <tbody>
@@ -83,7 +84,43 @@
                             <th id="date">Date</th>
                             <th id="due-date">Due Date</th>
                             <th id="fine">Fine Amount</th>
-                            <th id="fine-type">Fine Type</th>
+                            <!-- <th id="fine-type">Fine Type</th> -->
+                            <th id="payment-status">Payment Status</th>
+                        </thead>
+                    </div>
+                    <div id="fineData"></div>
+                </tbody>
+            </table>
+            <h2>Vehicle Fines</h2>
+            <table class="fines-table"
+                   id="table">
+                <tbody>
+                    <div class="tableheading">
+                        <thead>
+                            <th id="ticket-no">Ticket No</th>
+                            <th id="fine-no">Fine No</th>
+                            <th id="date">Date</th>
+                            <th id="due-date">Due Date</th>
+                            <th id="fine">Fine Amount</th>
+                            <!-- <th id="fine-type">Fine Type</th> -->
+                            <th id="payment-status">Payment Status</th>
+                        </thead>
+                    </div>
+                    <div id="fineData"></div>
+                </tbody>
+            </table>
+            <h3>Pedestrian Fines</h3>
+            <table class="fines-table"
+                   id="table">
+                <tbody>
+                    <div class="tableheading">
+                        <thead>
+                            <th id="ticket-no">Ticket No</th>
+                            <th id="fine-no">Fine No</th>
+                            <th id="date">Date</th>
+                            <th id="due-date">Due Date</th>
+                            <th id="fine">Fine Amount</th>
+                            <!-- <th id="fine-type">Fine Type</th> -->
                             <th id="payment-status">Payment Status</th>
                         </thead>
                     </div>
