Change id of three tables

--- a/user_service/user/fines/index.html
+++ b/user_service/user/fines/index.html
@@ -75,7 +75,7 @@
         <div class="tableSection">
             <h1>Driver Fines</h1>
             <table class="fines-table"
-                   id="table">
+                   id="table-driver">
                 <tbody>
                     <div class="tableheading">
                         <thead>
@@ -93,7 +93,7 @@
             </table>
             <h2>Vehicle Fines</h2>
             <table class="fines-table"
-                   id="table">
+                   id="table-vehicle">
                 <tbody>
                     <div class="tableheading">
                         <thead>
@@ -111,7 +111,7 @@
             </table>
             <h3>Pedestrian Fines</h3>
             <table class="fines-table"
-                   id="table">
+                   id="table-pedestrian">
                 <tbody>
                     <div class="tableheading">
                         <thead>
