Add comments in the code to identify three tables separately

--- a/user_service/user/fines/index.html
+++ b/user_service/user/fines/index.html
@@ -73,6 +73,8 @@
     <div class="container">
         <h1>Fines Details</h1>
         <div class="tableSection">
+
+            <!-- Driver fines table -->
             <h1>Driver Fines</h1>
             <table class="fines-table"
                    id="table-driver">
@@ -91,6 +93,8 @@
                     <div id="fineData"></div>
                 </tbody>
             </table>
+
+            <!-- Vehicle fines table -->
             <h2>Vehicle Fines</h2>
             <table class="fines-table"
                    id="table-vehicle">
@@ -109,6 +113,8 @@
                     <div id="fineData"></div>
                 </tbody>
             </table>
+
+            <!-- Pedestrian fines table -->
             <h3>Pedestrian Fines</h3>
             <table class="fines-table"
                    id="table-pedestrian">
